--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,6 +5,7 @@
 @import 'about';
 @import 'partners';
 @import 'features';
+@import 'engage';
 @import 'manage';
 @import 'communicate';
 @import 'audience';
