added adaptive for communicate section

--- a/styles/engage.scss
+++ b/styles/engage.scss
@@ -60,6 +60,7 @@
 		text-align: center;
     align-items: center;
     gap: 40px;
+    padding: 40px 15px 4px;
 
 		@media screen and (max-width: $media-480) {
 			text-align: left;
