--- a/styles.css
+++ b/styles.css
@@ -666,6 +666,7 @@
     text-align: center;
     align-items: center;
     gap: 40px;
+    padding: 40px 15px 4px;
   }
 }
 @media screen and (max-width: 768px) and (max-width: 480px) {
@@ -772,7 +773,7 @@
 @media screen and (max-width: 1200px) and (max-width: 480px) {
   .manage {
     text-align: left;
-    padding: 20px 24px 34px;
+    padding: 50px 24px 34px;
   }
   .manage__wheel-image {
     width: 290px;
@@ -797,7 +798,7 @@
 .communicate__inner {
   display: flex;
   flex-direction: column;
-  gap: 88px;
+  gap: 24px;
   padding: 110px 50px 120px 130px;
 }
 .communicate__content {
@@ -819,6 +820,7 @@
   margin-bottom: 30px;
   max-width: 462px;
   margin-bottom: 29px;
+  font-size: clamp(40px, 2.2037rem + 1.4815vw, 56px);
 }
 .communicate__content-description {
   font-size: 24px;
@@ -826,8 +828,26 @@
   margin-bottom: 40px;
   line-height: 1.4;
 }
-.communicate__content-image {
+.communicate__content-divider {
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgba(43, 41, 45, 0.1);
+  width: 150px;
+  margin-top: 90px;
+}
+.communicate__content-figure-image {
+  width: 100%;
   max-width: 425px;
+  margin-top: -50px;
+  margin-bottom: 24px;
+}
+.communicate__content-figure-caption {
+  font-size: 14px;
+  color: rgba(43, 41, 45, 0.6);
+  text-align: center;
+}
+.communicate__content-divider--mobile {
+  display: none;
 }
 .communicate__list {
   font-size: 18px;
@@ -855,6 +875,57 @@
   color: #0189d1;
 }
 
+@media screen and (max-width: 1320px) {
+  .communicate__inner {
+    align-items: center;
+    justify-content: center;
+    padding: 110px 50px 120px;
+  }
+  .communicate__content-divider {
+    display: none;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .communicate__content {
+    flex-direction: column;
+    text-align: center;
+    gap: 100px;
+  }
+  .communicate__list {
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+  .communicate__inner {
+    gap: 34px;
+    padding: 58px 50px 120px;
+  }
+}
+@media screen and (max-width: 576px) {
+  .communicate__content-image {
+    width: 290px;
+    height: auto;
+  }
+  .communicate__content {
+    text-align: left;
+  }
+  .communicate__inner {
+    padding: 58px 15px 120px;
+    gap: 38px;
+  }
+  .communicate__list {
+    gap: 20px;
+    margin-top: -24px;
+  }
+  .communicate__content-divider--mobile {
+    display: flex;
+    align-self: self-start;
+    margin: 0;
+  }
+  .communicate__content-figure-image {
+    margin-bottom: 20px;
+  }
+}
 .audience__inner {
   background-color: rgba(0, 161, 198, 0.1);
   padding: 108px 56px 110px 130px;
@@ -1210,13 +1281,6 @@
 
 .show {
   display: block;
-}
-
-.divider {
-  border-width: 1px;
-  border-style: solid;
-  border-color: rgba(43, 41, 45, 0.1);
-  width: 100%;
 }
 
 .sr-only {
