--- a/styles/communicate.scss
+++ b/styles/communicate.scss
@@ -1,73 +1,151 @@
 .communicate {
-	background-color: $color-light;
-	&__inner {
-		display: flex;
-		flex-direction: column;
-		gap: 88px;
-		padding: 110px 50px 120px 130px;
-	}
+  background-color: $color-light;
 
-	&__content {
-		display: flex;
-		align-items: center;
-		gap: 192px;
+  &__inner {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    padding: 110px 50px 120px 130px;
+  }
 
-		&-decor {
-			font-size: 22px;
-			color: $color-blue-light;
-			font-weight: 700;
-			margin-bottom: 22px;
-			display: block
-		}
+  &__content {
+    display: flex;
+    align-items: center;
+    gap: 192px;
 
-		&-title {
-			@include title;
-			max-width: 462px;
-			margin-bottom: 29px;
-		}
+    &-decor {
+      font-size: 22px;
+      color: $color-blue-light;
+      font-weight: 700;
+      margin-bottom: 22px;
+      display: block;
+    }
 
-		&-description {
-			font-size: 24px;
-			max-width: 462px;
-			margin-bottom: 40px;
-			line-height: 1.4;
-		}
+    &-title {
+      @include title;
+      max-width: 462px;
+      margin-bottom: 29px;
+      font-size: clamp(40px, 2.2037rem + 1.4815vw, 56px);
+    }
 
-		&-image {
-			max-width: 425px;
-		}
-	}
+    &-description {
+      font-size: 24px;
+      max-width: 462px;
+      margin-bottom: 40px;
+      line-height: 1.4;
+    }
 
-	&__list {
-		font-size: 18px;
-		display: flex;
-		align-items: center;
-		gap: 30px;
+    &-divider {
+      border-width: 1px;
+      border-style: solid;
+      border-color: rgba($color-black, 0.1);
+      width: 150px;
+      margin-top: 90px;
+    }
 
-		&-item {
-			max-width: 360px;
-		}
+    &-figure-image {
+      width: 100%;
+      max-width: 425px;
+      margin-top: -50px;
+      margin-bottom: 24px;
+    }
 
-		&-item:nth-of-type(3) {
-			max-width: 364px;
-		}
-	}
+    &-figure-caption {
+      font-size: 14px;
+      color: rgba($color-black, 0.6);
+      text-align: center;
+    }
 
+    &-divider--mobile {
+      display: none;
+    }
+  }
+
+  &__list {
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    gap: 30px;
+
+    &-item {
+      max-width: 360px;
+    }
+
+    &-item:nth-of-type(3) {
+      max-width: 364px;
+    }
+  }
 }
 
 .list-item {
-	&__desc {
-		margin-bottom: 0;
-	}
+  &__desc {
+    margin-bottom: 0;
+  }
 
-	&__link {
-		color: $color-accent;
-		text-decoration: underline;
-		font-weight: 700;
-		transition: color 0.2s ease-in-out;
-	}
+  &__link {
+    color: $color-accent;
+    text-decoration: underline;
+    font-weight: 700;
+    transition: color 0.2s ease-in-out;
+  }
 
-	&__link:hover {
-		color: $color-blue-light;
-	}
+  &__link:hover {
+    color: $color-blue-light;
+  }
+}
+
+// MEDIA QUERIES
+
+@media screen and (max-width: $media-1320) {
+  .communicate__inner {
+    align-items: center;
+    justify-content: center;
+    padding: 110px 50px 120px;
+  }
+  .communicate__content-divider {
+    display: none;
+  }
+}
+
+@media screen and (max-width: $media-1200) {
+  .communicate__content {
+    flex-direction: column;
+    text-align: center;
+    gap: 100px;
+  }
+  .communicate__list {
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+  .communicate__inner {
+    gap: 34px;
+    padding: 58px 50px 120px;
+  }
+}
+
+@media screen and (max-width: $media-576) {
+  .communicate__content-image {
+    width: 290px;
+    height: auto;
+  }
+  .communicate__content {
+    text-align: left;
+  }
+  .communicate__inner {
+    padding: 58px 15px 120px;
+    gap: 38px;
+  }
+  .communicate__list {
+    gap: 20px;
+    margin-top: -24px;
+  }
+  .communicate__content-divider--mobile {
+    display: flex;
+    align-self: self-start;
+    margin: 0;
+  }
+  .communicate__content-figure-image {
+    margin-bottom: 20px;
+  }
 }
