--- a/styles.css
+++ b/styles.css
@@ -910,7 +910,7 @@
     text-align: left;
   }
   .communicate__inner {
-    padding: 58px 15px 120px;
+    padding: 58px 15px 48px;
     gap: 38px;
   }
   .communicate__list {
@@ -927,21 +927,31 @@
   }
 }
 .audience__inner {
-  background-color: rgba(0, 161, 198, 0.1);
-  padding: 108px 56px 110px 130px;
   display: flex;
   flex-direction: column;
   gap: 110px;
+  background-color: rgba(0, 161, 198, 0.1);
+  padding: 108px 56px 110px 130px;
+}
+@media screen and (max-width: 1320px) {
+  .audience__inner {
+    gap: 60px;
+  }
+}
+@media screen and (max-width: 576px) {
+  .audience__inner {
+    gap: 40px;
+  }
 }
 .audience__content {
   margin: 0 auto;
   text-align: center;
 }
 .audience__content-decor {
+  display: block;
+  font-weight: 700;
   font-size: 22px;
   margin-bottom: 24px;
-  font-weight: 700;
-  display: block;
 }
 .audience__content-title {
   font-size: 56px;
@@ -950,6 +960,7 @@
   margin-bottom: 30px;
   margin-bottom: 30px;
   max-width: 555px;
+  font-size: clamp(40px, 2.2037rem + 1.4815vw, 56px);
 }
 .audience__content-description {
   font-size: 24px;
@@ -964,9 +975,8 @@
 }
 
 .cards__list {
-  display: grid;
-  grid-template-columns: repeat(4, 262px);
-  column-gap: 30px;
+  display: flex;
+  gap: 30px;
 }
 .cards__list-item {
   width: 262px;
@@ -980,12 +990,14 @@
   background-color: #3142c6;
   color: #fff;
 }
-.cards__list-item:nth-of-type(2) {
-  background-color: #3142c6;
-  color: #fff;
-}
 .cards__list-link {
   transition: rotate 0.2s ease-in;
+}
+.cards__list-link:nth-of-type(3) .cards__list-item {
+  line-height: 4;
+}
+.cards__list-link:nth-of-type(2) .cards__list-item {
+  line-height: 2;
 }
 .cards__list-link:hover {
   rotate: -5deg;
@@ -993,19 +1005,53 @@
   border-radius: 8px;
 }
 .cards__list-img {
-  margin-bottom: 22px;
-  width: 195px;
   width: 142px;
   height: 195px;
   object-fit: contain;
+  margin-bottom: 22px;
 }
 .cards__list-title {
   display: block;
   text-align: center;
   font-size: 22px;
   font-weight: 700;
+  padding-top: 20px;
 }
 
+@media screen and (max-width: 1320px) {
+  .audience__inner {
+    padding: 52px 15px 130px;
+    align-items: center;
+    justify-content: center;
+  }
+  .cards__list {
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+  }
+  .cards__list-item {
+    width: 290px;
+  }
+}
+@media screen and (max-width: 576px) {
+  .audience__content-buttons {
+    flex-direction: column;
+  }
+  .audience__content-buttons .button-blue,
+  .audience__content-buttons .button-white {
+    width: 100%;
+  }
+  .audience__content-decor {
+    margin-bottom: 18px;
+  }
+  .audience__content-title {
+    margin-bottom: -10px;
+  }
+  .audience__content-description {
+    margin-bottom: 26px;
+  }
+}
 .swiper {
   width: 100%;
   height: 250px;
