added adaptive for partners-2 section

--- a/styles.css
+++ b/styles.css
@@ -1051,6 +1051,9 @@
   .audience__content-description {
     margin-bottom: 26px;
   }
+  .audience__inner {
+    padding: 52px 15px 52px;
+  }
 }
 .swiper {
   width: 100%;
