--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -138,4 +138,9 @@
   .audience__content-description {
     margin-bottom: 26px;
   }
+  .audience__inner {
+    padding: 52px 15px 52px;
+  }
 }
+
+
