--- a/styles/feedback.scss
+++ b/styles/feedback.scss
@@ -54,6 +54,10 @@
 	color: $color-blue;
 	text-align: center;
 	margin-bottom: 28px;
+
+	@media screen and (max-width: $media-480) {
+		line-height: 1.3;
+	}
 }
 
 .feedback__blockquote-text {
@@ -65,3 +69,89 @@
 	margin-top: -80px;
 }
 
+// MEDIA QUERIES
+
+@media screen and (max-width: $media-1200) {
+	.feedback__image {
+		display: none;
+	}
+	.feedback {
+		padding: 0 15px;
+	}
+}
+
+@media screen and (max-width: $media-768) {
+	.swiper {
+		height: 285px;
+	}
+	.feedback__blockquote-author {
+		margin-top: 90px;
+	}
+	.feedback__blockquote-text {
+		margin-top: -70px;
+	}
+}
+
+@media screen and (max-width: $media-576) {
+	.swiper {
+		height: 300px;
+	}
+	.feedback__blockquote-author {
+		margin-top: 120px;
+	}
+	.feedback__blockquote-text {
+		margin-top: -50px;
+	}
+	.feedback__title,
+	.feedback__blockquote-text {
+		text-align: left;
+	}
+}
+
+@media screen and (max-width: 470px) {
+	.feedback__image {
+		display: block;
+		position: static;
+		width: 290px;
+		height: 258px;
+		margin: 30px auto 48px;
+	}
+	.swiper {
+		height: 360px;
+	}
+	.feedback__blockquote-author {
+		margin-top: 156px;
+		text-align: left;
+	}
+	.feedback__blockquote-text {
+		margin-top: -70px;
+		line-height: 1.4;
+	}
+	.feedback__blockquote-role {
+		text-align: left;
+	}
+}
+
+@media screen and (max-width: 380px) {
+	.swiper {
+		height: 440px;
+	}
+	.feedback__blockquote-author {
+		margin-top: 246px;
+	}
+	.feedback__blockquote-text {
+		margin-top: -70px;
+	}
+}
+
+@media screen and (max-width: 340px) {
+	.swiper {
+		height: 450px;
+	}
+	.feedback__blockquote-author {
+		margin-top: 256px;
+	}
+	.feedback__blockquote-text {
+		margin-top: -70px;
+	}
+}
