--- a/styles.css
+++ b/styles.css
@@ -1216,6 +1216,7 @@
   font-weight: 700;
   line-height: 1;
   margin-bottom: 30px;
+  font-size: clamp(40px, 2.2037rem + 1.4815vw, 56px);
 }
 .hiring__content-description {
   font-size: 24px;
@@ -1227,36 +1228,87 @@
   margin: 0 auto;
   max-width: 750px;
 }
-.hiring__link {
+.hiring__link:hover .hiring__item-info-location {
+  color: #fff;
+}
+.hiring__item {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 26px;
+  padding: 24px 26px;
   border: 2px solid rgba(43, 41, 45, 0.1);
   border-radius: 8px;
   max-width: 750px;
   transition: background-color 0.2s ease-in-out;
   margin-bottom: 20px;
 }
-.hiring__link:hover {
+.hiring__item:hover {
   background-color: #3142c6;
   cursor: pointer;
   color: #fff;
 }
-.hiring__link-role {
-  font-size: 22;
+.hiring__item-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 620px;
+}
+.hiring__item-info-role {
+  font-size: 22px;
   font-weight: 700;
 }
-.hiring__link-location {
-  font-size: 18px;
+.hiring__item-info-location {
+  font-size: clamp(1rem, 0.95rem + 0.2vw, 1.125rem);
+  color: rgba(43, 41, 45, 0.6);
 }
-.hiring__link-arrow {
-  width: 8px;
-  height: 12px;
-  line-height: 0.4;
-  display: block;
+.hiring__item-arrow {
+  font-size: 14px;
 }
 
+@media screen and (max-width: 1200px) {
+  .hiring {
+    padding: 50px 15px 110px;
+  }
+  .hiring__content {
+    margin-bottom: 40px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .hiring__item-info {
+    flex-direction: column;
+    align-items: start;
+  }
+  .hiring__content-title {
+    margin-bottom: 22px;
+  }
+  .hiring__content-description {
+    line-height: 1.4;
+    margin-bottom: 32px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .hiring__item {
+    padding: 0 0 0 18px;
+    margin-bottom: 14px;
+  }
+  .hiring__item-arrow {
+    background-color: #d5d4d5;
+    padding: 60px 20px;
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+  }
+}
+@media screen and (max-width: 370px) {
+  .hiring__item-info-role {
+    max-width: 130px;
+    margin-bottom: 14px;
+  }
+  .hiring__content-btn {
+    width: 100%;
+    max-width: 290px;
+  }
+}
 .subscription {
   display: flex;
   align-items: center;
