--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -11,6 +11,7 @@ $color-yellow-light: #fcf0e3;
 $color-orange: #f1592b;
 $color-grey: #2c3241;
 $color-body: #f2f2f2;
+$color-gray: #d5d4d5;
 
 @mixin title {
   font-size: 56px;
