fix partners adaptive

--- a/styles.css
+++ b/styles.css
@@ -439,7 +439,7 @@
 }
 @media screen and (max-width: 885px) {
   .partners {
-    padding: 0 15px 46px 15px;
+    padding: 20px 15px 46px 15px;
   }
 }
 @media (max-width: 576px) {
