--- a/styles/partners.scss
+++ b/styles/partners.scss
@@ -46,7 +46,7 @@
 
 @media screen and (max-width: $media-855) {
   .partners {
-    padding: 0 15px 46px 15px;
+    padding: 20px 15px 46px 15px;
   }
 }
 
