--- a/styles/subscription.scss
+++ b/styles/subscription.scss
@@ -74,7 +74,7 @@
 
 @media screen and (max-width: 586px) {
 	.subscription {
-    padding: 54px 15px;
+    padding: 54px 15px 46px;
 		align-items: center;
 		justify-content: center;
 		gap: 36px;
