--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -12,6 +12,7 @@ $color-orange: #f1592b;
 $color-grey: #2c3241;
 $color-body: #f2f2f2;
 $color-gray: #d5d4d5;
+$color-dark: #000000;
 
 @mixin title {
   font-size: 56px;
