--- a/styles.css
+++ b/styles.css
@@ -980,11 +980,12 @@
   gap: 30px;
 }
 .cards__list-item {
-  width: 262px;
+  width: 290px;
   height: 300px;
   background-color: #fff;
   border-radius: 8px;
   padding: 22px 62px 32px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05), 0px 1px 3px rgba(0, 0, 0, 0.1), inset 0px 1px 0px rgba(255, 255, 255, 0.1);
   transition: background-color 0.2s linear, color 0.2s linear;
 }
 .cards__list-item:hover {
@@ -993,12 +994,6 @@
 }
 .cards__list-link {
   transition: rotate 0.2s ease-in;
-}
-.cards__list-link:nth-of-type(3) .cards__list-item {
-  line-height: 4;
-}
-.cards__list-link:nth-of-type(2) .cards__list-item {
-  line-height: 2;
 }
 .cards__list-link:hover {
   rotate: -5deg;
