--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -50,11 +50,13 @@
     gap: 30px;
 
     &-item {
-      width: 262px;
+      width: 290px;
       height: 300px;
       background-color: $color-light;
       border-radius: 8px;
       padding: 22px 62px 32px;
+      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05), 0px 1px 3px rgba(0, 0, 0, 0.1),
+      inset 0px 1px 0px rgba(255, 255, 255, 0.1);
       transition: background-color 0.2s linear, color 0.2s linear;
     }
 
@@ -65,16 +67,6 @@
 
     &-link {
       transition: rotate 0.2s ease-in;
-    }
-
-    &-link:nth-of-type(3) &-item {
-      line-height: 4;
-    }
-    &-link:nth-of-type(2) &-item {
-      line-height: 2;
-    }
-    &-link:nth-of-type(4) &-item {
-      // line-height: 2;
     }
 
     &-link:hover {
