--- a/styles.css
+++ b/styles.css
@@ -980,13 +980,20 @@
   gap: 30px;
 }
 .cards__list-item {
-  width: 290px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 262px;
   height: 300px;
   background-color: #fff;
   border-radius: 8px;
   padding: 22px 62px 32px;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05), 0px 1px 3px rgba(0, 0, 0, 0.1), inset 0px 1px 0px rgba(255, 255, 255, 0.1);
   transition: background-color 0.2s linear, color 0.2s linear;
+}
+@media screen and (max-width: 576px) {
+  .cards__list-item {
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05), 0px 1px 3px rgba(0, 0, 0, 0.1), inset 0px 1px 0px rgba(255, 255, 255, 0.1);
+  }
 }
 .cards__list-item:hover {
   background-color: #3142c6;
@@ -994,6 +1001,7 @@
 }
 .cards__list-link {
   transition: rotate 0.2s ease-in;
+  display: block;
 }
 .cards__list-link:hover {
   rotate: -5deg;
@@ -1001,7 +1009,17 @@
   border-radius: 8px;
 }
 .cards__list-img {
+  width: 119px;
+  height: 200px;
   margin-bottom: 22px;
+}
+.cards__list .cards__list-item-img {
+  height: 195px;
+  background-size: cover;
+}
+.cards__list .cards__list-item-img--size {
+  width: 119px;
+  align-items: center;
 }
 .cards__list-title {
   display: block;
@@ -1022,6 +1040,9 @@
     align-items: center;
     justify-content: center;
     gap: 15px;
+  }
+  .cards__list-item {
+    width: 290px;
   }
 }
 @media screen and (max-width: 576px) {
