--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -50,14 +50,21 @@
     gap: 30px;
 
     &-item {
-      width: 290px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 262px;
       height: 300px;
       background-color: $color-light;
       border-radius: 8px;
       padding: 22px 62px 32px;
-      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05), 0px 1px 3px rgba(0, 0, 0, 0.1),
-      inset 0px 1px 0px rgba(255, 255, 255, 0.1);
+
       transition: background-color 0.2s linear, color 0.2s linear;
+
+      @media screen and (max-width: $media-576) {
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05), 0px 1px 3px rgba(0, 0, 0, 0.1),
+          inset 0px 1px 0px rgba(255, 255, 255, 0.1);
+      }
     }
 
     &-item:hover {
@@ -67,6 +74,7 @@
 
     &-link {
       transition: rotate 0.2s ease-in;
+      display: block;
     }
 
     &-link:hover {
@@ -76,10 +84,21 @@
     }
 
     &-img {
+      width: 119px;
+      height: 200px;
       // width: 142px;
       // height: 195px;
-      // object-fit: cover;
       margin-bottom: 22px;
+    }
+
+    .cards__list-item-img {
+      height: 195px;
+      background-size: cover;
+    }
+
+    .cards__list-item-img--size {
+      width: 119px;
+      align-items: center;
     }
 
     &-title {
@@ -109,7 +128,7 @@
   }
 
   .cards__list-item {
-    // width: 290px;
+    width: 290px;
   }
 }
 
