--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -49,6 +49,7 @@
 
       &-item {
         font-size: 18px;
+        line-height: 1.4;
         color: rgba($color-black, 0.6);
       }
 
@@ -120,7 +121,7 @@
 
 @media screen and (max-width: $media-576) {
   .footer__top {
-    padding: 42px 0 12px 25px;
+    padding: 42px 0 12px 15px;
     grid-template-columns: repeat(1, 300px);
     justify-items: left;
   }
