--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -41,7 +41,7 @@
     &-title {
       font-size: 22px;
       font-weight: 700;
-      margin-bottom: 22px;
+      margin-bottom: 18px;
     }
 
     &-list {
@@ -165,5 +165,8 @@
   }
   .footer__links:nth-of-type(3) {
     margin-top: -34px;
+  }
+  .footer__info {
+    padding: 0 15px;
   }
 }
