--- a/styles.css
+++ b/styles.css
@@ -946,6 +946,7 @@
 .audience__content {
   margin: 0 auto;
   text-align: center;
+  padding-right: 20px;
 }
 .audience__content-decor {
   display: block;
@@ -961,6 +962,11 @@
   margin-bottom: 30px;
   max-width: 555px;
   font-size: clamp(40px, 2.2037rem + 1.4815vw, 56px);
+}
+@media screen and (max-width: 480px) {
+  .audience__content-title {
+    font-size: 39px;
+  }
 }
 .audience__content-description {
   font-size: 24px;
@@ -992,12 +998,8 @@
   background-color: #fff;
   border-radius: 8px;
   padding: 22px 62px 32px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05), 0px 1px 3px rgba(0, 0, 0, 0.1), inset 0px 1px 0px rgba(255, 255, 255, 0.1);
   transition: background-color 0.2s linear, color 0.2s linear;
-}
-@media screen and (max-width: 576px) {
-  .cards__list-item {
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05), 0px 1px 3px rgba(0, 0, 0, 0.1), inset 0px 1px 0px rgba(255, 255, 255, 0.1);
-  }
 }
 .cards__list-item:hover {
   background-color: #3142c6;
