--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -15,6 +15,7 @@
   &__content {
     margin: 0 auto;
     text-align: center;
+    padding-right: 20px; //!!!!!!!!!!!!!!!
 
     &-decor {
       display: block;
@@ -28,13 +29,17 @@
       margin-bottom: 30px;
       max-width: 555px;
       font-size: clamp(40px, 2.2037rem + 1.4815vw, 56px);
+
+      @media screen and (max-width: $media-480) {
+        font-size: 39px;
+      }
     }
 
     &-description {
       font-size: 24px;
       max-width: 555px;
       line-height: 32px;
-      @media  screen and (max-width: $media-480) {
+      @media screen and (max-width: $media-480) {
         line-height: 34px;
       }
     }
@@ -61,13 +66,9 @@
       background-color: $color-light;
       border-radius: 8px;
       padding: 22px 62px 32px;
-
+      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05), 0px 1px 3px rgba(0, 0, 0, 0.1),
+        inset 0px 1px 0px rgba(255, 255, 255, 0.1);
       transition: background-color 0.2s linear, color 0.2s linear;
-
-      @media screen and (max-width: $media-576) {
-        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05), 0px 1px 3px rgba(0, 0, 0, 0.1),
-          inset 0px 1px 0px rgba(255, 255, 255, 0.1);
-      }
     }
 
     &-item:hover {
