--- a/styles.css
+++ b/styles.css
@@ -967,11 +967,7 @@
   margin-bottom: 30px;
   max-width: 555px;
   font-size: clamp(40px, 2.2037rem + 1.4815vw, 56px);
-}
-@media screen and (max-width: 480px) {
-  .audience__content-title {
-    font-size: 38px;
-  }
+  letter-spacing: -0.36px;
 }
 .audience__content-description {
   font-size: 24px;
