--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -35,10 +35,11 @@
       margin-bottom: 30px;
       max-width: 555px;
       font-size: clamp(40px, 2.2037rem + 1.4815vw, 56px);
+      letter-spacing: -0.36px;
 
-      @media screen and (max-width: $media-480) {
-        font-size: 38px;
-      }
+      // @media screen and (max-width: $media-480) {
+      //   font-size: 39px;
+      // }
     }
 
     &-description {
