--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -45,9 +45,9 @@
     &-description {
       font-size: 24px;
       max-width: 555px;
-      line-height: 32px;
+      line-height: 34px;
       @media screen and (max-width: $media-480) {
-        line-height: 34px;
+        line-height: 34px; //!!!!!!!!!!!!!!!
       }
     }
   }
@@ -159,7 +159,7 @@
     margin-bottom: -10px;
   }
   .audience__content-description {
-    margin-bottom: 22px;
+    margin-bottom: 24px; //!!!!!!!!!!!!!!!!!
   }
   .audience__inner {
     padding: 52px 15px 52px;
