--- a/styles.css
+++ b/styles.css
@@ -1067,7 +1067,8 @@
     margin-bottom: -10px;
   }
   .audience__content-description {
-    margin-bottom: 24px;
+    margin-bottom: 26px;
+    margin-top: 26px;
   }
   .audience__inner {
     padding: 52px 15px 52px;
