--- a/styles/header.scss
+++ b/styles/header.scss
@@ -3,7 +3,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 40px 130px 36px 130px;
+  // padding: 40px 130px 36px 130px; //!!!!!!
+  width: 1140px; // !!!!!!!!!!!!
+  margin: 0 auto;
   background-color: $color-beige;
   transition: padding 0.3s, background-color 0.3s;
   z-index: 1002;
