--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,21 @@
+.header {
+  background-color: #fff;
+}
+.header .fa-chevron-down {
+  display: none;
+}
+.header .nav__list {
+  margin-top: 18px;
+  margin-right: 38px;
+}
+
 .header__inner {
   position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 1140px;
+  padding-left: 15px;
   margin: 0 auto;
   background-color: #f3c6bd;
   transition: padding 0.3s, background-color 0.3s;
