--- a/styles/header.scss
+++ b/styles/header.scss
@@ -4,7 +4,7 @@
     display: none;
   }
   .nav__list {
-    margin-top: 14px;
+    margin-top: 12px;
     margin-right: 38px;
   }
 }
@@ -62,12 +62,14 @@
     color: $color-black;
     font-weight: 700;
     font-size: 20px;
+    line-height: 25px;
   }
 
   &-description {
     font-size: 18px;
     opacity: 0.6;
     color: $color-black;
+    line-height: 25px;
   }
 }
 
