--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
   justify-content: space-between;
   align-items: center;
   width: 1140px;
-  padding: 2px 0 0 15px;
+  padding: 2px 0 2px 15px;
   margin: 0 auto;
   background-color: #f3c6bd;
   transition: padding 0.3s, background-color 0.3s;
