--- a/styles/header.scss
+++ b/styles/header.scss
@@ -16,7 +16,7 @@
   align-items: center;
   // padding: 40px 130px 36px 130px; //!!!!!!
   width: 1140px; // !!!!!!!!!!!!
-  padding: 2px 0 0 15px; //!!!!!!!!!
+  padding: 2px 0 2px 15px; //!!!!!!!!!
   margin: 0 auto;
   background-color: $color-beige;
   transition: padding 0.3s, background-color 0.3s;
