--- a/styles/header.scss
+++ b/styles/header.scss
@@ -4,7 +4,7 @@
     display: none;
   }
   .nav__list {
-    margin-top: 12px;
+    margin-top: 10px;
     margin-right: 38px;
   }
 }
@@ -16,7 +16,7 @@
   align-items: center;
   // padding: 40px 130px 36px 130px; //!!!!!!
   width: 1140px; // !!!!!!!!!!!!
-  padding: 2px 0 2px 15px; //!!!!!!!!!
+  padding: 1px 0 1px 15px; //!!!!!!!!!
   margin: 0 auto;
   background-color: $color-beige;
   transition: padding 0.3s, background-color 0.3s;
@@ -77,7 +77,7 @@
   &__list {
     display: flex;
     align-items: center;
-    gap: 52px;
+    gap: 54px; //!!!!!!!!!!!!!!!
 
     &-item {
       cursor: pointer;
