--- a/styles/global.scss
+++ b/styles/global.scss
@@ -2,7 +2,7 @@
 .button-white {
   font-size: 18px;
   font-weight: 700;
-  padding: 10px 28px;
+  padding: 12px 30px; //!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
   border-radius: 2px;
   transition: opacity 0.2s ease-in, scale 0.2s ease-in-out;
 }
