--- a/styles/header.scss
+++ b/styles/header.scss
@@ -45,8 +45,7 @@
 .logo {
   display: flex;
   align-items: center;
-  gap: 16px;
-
+  gap: 14px; //!!!!!!!!!!!!!!!!!
   &__img {
     max-width: 60px;
     height: 60px;
@@ -77,7 +76,7 @@
   &__list {
     display: flex;
     align-items: center;
-    gap: 56px; //!!!!!!!!!!!!!!!
+    gap: 54px; //!!!!!!!!!!!!!!!
 
     &-item {
       cursor: pointer;
